Fix dropdown hidden behind well

--- a/airflow/www/static/css/main.css
+++ b/airflow/www/static/css/main.css
@@ -580,7 +580,7 @@ label[for="timezone-other"],
 
 /* Override FAB table views where table width extends beyond parent containers */
 .panel-body .panel-group + div {
-  overflow-x: auto;
+  overflow-x: visible;
 }
 
 .task-instance-modal-column {
